# autodoc

./: LICENSE  README.md  pyproject.toml
src/notebook-autodoc/generator/: __init__.py
src/notebook_autodoc/generator/: __init__.py  base.py  generator.py
